--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-minifier": "^1.2.2",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.0",
